@@ -1,5 +1,13 @@
 2005-07-16  Bruno Haible  <bruno@clisp.org>
 
+	* lock.h (gl_once_t): New type.
+	(gl_once_define, gl_once): New macros.
+	* lock.c (fresh_once): New variable.
+	(glthread_once, glthread_once_call, glthread_once_singlethreaded): New
+	functions.
+
+2005-07-16  Bruno Haible  <bruno@clisp.org>
+
 	* lock.h: New file.
 	* lock.c: New file.
 	* bindtextdom.c: Include lock.h. Don't include THREAD_H. Remove
